# WolStart

./: CONTRIBUTING.md  Cargo.toml  README.md
src/: main.rs  service.rs
src/service/: run_as_current_user.rs
