[package]
name = "WolStart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.34.0"
sysinfo = "0.29.10"
windows-service = "0.6.0"
windows-sys = {version = "0.48.0", features = ["Win32_Foundation"]}
winapi = {version = "0.3.9", features = ["wtsapi32", "processthreadsapi", "userenv"]}
log = "0.4.20"
simplelog = "0.12.1"
clap = "4.4.0"